# tinysemver

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  action.yml  pyproject.toml  requirements.txt  setup.py  tinysemver.py
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: prerelease.yml  release.yml  version.yml
tinysemver/: __init__.py  tinysemver.py
