[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tinysemver"
version = "2.1.0"
description = "Semantic-Versioning with LLMs and without 300,000 lines of JS"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Ash Vardanian", email = "1983160+ashvardanian@users.noreply.github.com" },
    { name = "Guillaume de Rouville", email = "31691250+grouville@users.noreply.github.com" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = ["openai >= 1.54.4", "rich >= 13.8.0"]

[project.scripts]
tinysemver = "tinysemver.tinysemver:main"

[project.urls]
Homepage = "https://pypi.org/project/tinysemver/"
Documentation = "https://github.com/ashvardanian/tinysemver/blob/main/README.md"
Repository = "https://github.com/ashvardanian/tinysemver.git"
Issues = "https://github.com/ashvardanian/tinysemver/issues"
Changelog = "https://github.com/ashvardanian/tinysemver/blob/main/CHANGELOG.md"

[tool.setuptools]
package-dir = { "" = "." }
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]


# Configuration options for the Black formatter:
# https://black.readthedocs.io/en/latest/usage_and_configuration/the_basics.html#where-black-looks-for-the-file
[tool.black]
line-length = 120 # Set line length to the same value as in `.clang-format` for modern wide screens
